--- a/vignettes/pcha.Rmd
+++ b/vignettes/pcha.Rmd
@@ -197,6 +197,7 @@ First we set a number of k to iterate through.  Using the future library we can 
 ```{r}
 
 ks <- 3:8
+sse <- sapply(ks, function(k) pcha(X, k, calc_t_ratio = T)$sse)
 microbenchmark::microbenchmark(sse <- sapply(ks, function(k) pcha(X, k)$sse), times = 3)
 ```
 
@@ -207,7 +208,7 @@ cat("Optimal number of archetypes =", kp$knee_x, "\n")
 ```
 
 
-We can compare the performance of our rust implementation to the paretoTI package (note that this uses python and requires reticulate).  We see a slight gain in performance... Even a slight loss would still be worth it not to have to deal with python in R.  Although Rust implementation could be optimized further by using openblas libraries, this resulting in mounting compilation issues across different devices so we are sufficiently satisfied with current performance.
+We can compare the performance of our rust implementation to the paretoTI package (note that this uses python and requires reticulate).  We see a slight gain in performance... Even a slight loss would still be worth it not to have to deal with python in R.  Although Rust implementation could be optimized further by using openblas libraries, this results in compilation issues across different devices.  Therefore we are sufficiently satisfied with current performance.
 ```{r}
 library(reticulate)
 use_python("/Users/sfurlan/.virtualenvs/reticulate/bin/python")
@@ -229,7 +230,10 @@ To obtain the t-ratio we can run the pcha algorithm using the argument calc_t_ra
 ```{r}
 
 tratios <- sapply(ks, function(k) pcha(X, k, calc_t_ratio = T)$t_ratio)
-kp   <- find_knee_pt(tratios, ks, make_plot = TRUE)
+kp   <- find_knee_pt(tratios, ks, make_plot = TRUE, y_axis = "T ratio")
+
+
+
 ```
 
 
